[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Menu_Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Sperm.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ovule.png" type="Texture" id=3]
[ext_resource path="res://assets/esperfundo_1.png" type="Texture" id=4]
[ext_resource path="res://assets/esperfundo_2.png" type="Texture" id=5]
[ext_resource path="res://assets/esperfundo_3.png" type="Texture" id=6]
[ext_resource path="res://assets/btn_start.png" type="Texture" id=7]
[ext_resource path="res://assets/btn_exit.png" type="Texture" id=8]
[ext_resource path="res://assets/logo.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 8.5
} ]

[node name="Menu_Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Sperm" parent="." instance=ExtResource( 2 )]

[node name="Ovulo" type="Sprite" parent="."]
position = Vector2( 289.842, -28.1991 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 3 )

[node name="figurantes_1" type="Node2D" parent="."]
position = Vector2( -100, 82 )

[node name="Sperm_figurante" type="AnimatedSprite" parent="figurantes_1"]
position = Vector2( 30.9827, 79.84 )
rotation = -0.613308
scale = Vector2( 0.125, 0.125 )
frames = SubResource( 1 )
playing = true

[node name="Sperm_figurante2" type="AnimatedSprite" parent="figurantes_1"]
position = Vector2( 24.6273, 115.987 )
rotation = -0.73046
scale = Vector2( 0.125, 0.125 )
frames = SubResource( 1 )
playing = true

[node name="Sperm_figurante3" type="AnimatedSprite" parent="figurantes_1"]
position = Vector2( 32.1744, 139.819 )
rotation = -0.84025
scale = Vector2( 0.125, 0.125 )
frames = SubResource( 1 )
frame = 3
playing = true

[node name="Sperm_figurante4" type="AnimatedSprite" parent="figurantes_1"]
position = Vector2( 59.1849, 151.339 )
rotation = -1.03414
scale = Vector2( 0.125, 0.125 )
frames = SubResource( 1 )
playing = true

[node name="figurantes_2" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( -100.071, 82.0025 )

[node name="Sperm_figurante8" type="AnimatedSprite" parent="figurantes_2"]
position = Vector2( 76.3361, 127.503 )
rotation = -1.29571
scale = Vector2( 0.07, 0.07 )
frames = SubResource( 1 )
playing = true

[node name="Sperm_figurante9" type="AnimatedSprite" parent="figurantes_2"]
position = Vector2( 59.256, 122.737 )
rotation = -1.11609
scale = Vector2( 0.05, 0.05 )
frames = SubResource( 1 )
playing = true

[node name="Sperm_figurante10" type="AnimatedSprite" parent="figurantes_2"]
position = Vector2( 13.5762, 139.817 )
rotation = -1.14304
scale = Vector2( 0.05, 0.05 )
frames = SubResource( 1 )
frame = 3
playing = true

[node name="Start_btn" type="TextureButton" parent="."]
margin_left = 266.0
margin_top = 72.0
margin_right = 566.0
margin_bottom = 188.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 7 )

[node name="Exit_btn" type="TextureButton" parent="."]
margin_left = 268.0
margin_top = 103.0
margin_right = 568.0
margin_bottom = 219.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 8 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( -87.8399, 36.6932 )
scale = Vector2( 0.55, 0.38 )
texture = ExtResource( 9 )

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Start_btn" to="." method="_on_Start_btn_pressed"]
[connection signal="pressed" from="Exit_btn" to="." method="_on_Exit_btn_pressed"]
